--- a/Project 1/Project1.css
+++ b/Project 1/Project1.css
@@ -13,7 +13,7 @@ body {
 
 /* Header */
 .header {
-    background-color: #116B39; /* Laranja vibrante */
+    background-color: #116B39; 
     color: white;
     padding: 20px;
     display: flex;
@@ -185,26 +185,33 @@ body {
     margin-right: 5px; /* Espaço entre o ícone e o texto */
 }
 
-
-.recipe-detail_intructions{
-    column-gap: 64px;
-    flex-direction: row;
+.recipe-detail_section {
+    margin-left: 20px;
+    margin-top: 20px;
+    margin-bottom: 50px;
 }
 
-.recipe-ingredients{
+.recipe-detail_instructions {
+    display: flex;
+    column-gap: 64px;
+    flex-direction: row;
+    align-items: flex-start;
+}
+
+.recipe-ingredients {
     max-width: 290px;
     margin-bottom: 0px;
 }
 
-.recipe-ingredients_title{
+.recipe-ingredients_title {
     margin-bottom: 24px;
     font-family: "avenir", Arial, Helvetica, sans-serif;
     font-size: 32px;
     font-weight: 700;
-    line-height:38px;
+    line-height: 38px;
 }
 
-.recipe-ingredients_list{
+.recipe-ingredients_list {
     margin: 0;
     border: 1px solid #116B39;
     padding: 0;
@@ -216,9 +223,37 @@ body {
     line-height: 20px;
 }
 
-.recipe-ingredients_items{
+.recipe-ingredients_items {
     padding: 8px 24px 8px 56px;
     background-image: url(//sire-assets-natgeo.fichub.com/assets/24kitchen-v2/css/../images/icons/leaves.svg);
     background-repeat: no-repeat;
     background-position: 16px center;
+}
+
+.recipe-steps {
+    max-width: 600px;
+    margin-bottom: 56px;
+}
+
+.recipe-steps_title {
+    margin-bottom: 24px;
+    font-family: "avenir", Helvetica, Arial, sans-serif;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 38px;
+}
+
+.recipe-steps_list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.recipe-steps-items {
+    padding: 16px 0;
+    border-top: 1px solid #d9d9d9;
+    font-family: "avenir", Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
 }
