--- a/Project 1/Project1.css
+++ b/Project 1/Project1.css
@@ -1,3 +1,64 @@
+/* Estilização da tela de carregamento */
+.loading-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff; /* Cor de fundo */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999;
+    animation: fadeIn 1s ease-in, fadeOut 1s ease-out forwards 3s; /* Entrada e saída suaves */
+}
+
+/* Conteúdo central da animação */
+.loading-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* Texto de carregamento */
+.loading-text {
+    font-size: 2em;
+    margin-bottom: 20px;
+}
+
+/* Spinner de carregamento */
+.spinner {
+    width: 50px;
+    height: 50px;
+    border: 5px solid #333;
+    border-top-color: transparent;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+}
+
+/* Animação de rodar */
+@keyframes spin {
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+/* Animações para entrada e saída */
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeOut {
+    to {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
 /* Reset básico */
 * {
     margin: 0;
@@ -9,16 +70,23 @@ body {
     font-family: 'Arial', sans-serif;
     background-color: #f0f4f8; /* Cor de fundo mais suave */
     color: #333;
+    padding-top: 80px;
 }
 
-/* Header */
+/* Estilo para o cabeçalho */
 .header {
-    background-color: #116B39; 
+    background-color: #116B39;
     color: white;
     padding: 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .header-title {
@@ -27,24 +95,27 @@ body {
     margin-left: 20px;
 }
 
+/* Estilos para a barra de pesquisa */
 .search-bar {
     display: flex;
     align-items: center;
     margin-right: 20px;
 }
 
+/* Input de pesquisa */
 .search-bar input[type="text"] {
     padding: 10px 15px;
     border-radius: 20px 0 0 20px;
     border: none;
     outline: none;
     width: 250px;
-    background-color: #fff; /* Fundo branco para a barra de pesquisa */
+    background-color: #fff;
 }
 
+/* Botão de pesquisa */
 .search-bar button {
     padding: 10px 15px;
-    background-color: #333; /* Cor escura para o botão */
+    background-color: #333;
     color: white;
     border: none;
     border-radius: 0 20px 20px 0;
@@ -257,4 +328,18 @@ body {
     font-size: 14px;
     font-weight: 400;
     line-height: 20px;
+}
+
+.image-section {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px; /* Espaço acima da imagem */
+}
+
+.top-image {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    border-radius: 8px; /* Borda arredondada na imagem */
+    margin-bottom: 20px; /* Espaço abaixo da imagem */
 }
