--- a/Project 1/Project1.css
+++ b/Project 1/Project1.css
@@ -260,6 +260,9 @@ body {
     margin-left: 20px;
     margin-top: 20px;
     margin-bottom: 50px;
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
 }
 
 .recipe-detail_instructions {
@@ -330,6 +333,20 @@ body {
     line-height: 20px;
 }
 
+.image-container {
+    width: 80%; /* Mesmo tamanho que a .video-container */
+    max-width: 800px; /* Ajuste conforme necessário */
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.image-container:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
 .image-section {
     display: flex;
     justify-content: center;
@@ -337,9 +354,35 @@ body {
 }
 
 .top-image {
-    max-width: 100%;
-    height: auto;
-    display: block;
-    border-radius: 8px; /* Borda arredondada na imagem */
-    margin-bottom: 20px; /* Espaço abaixo da imagem */
+    width: 100%;
+    height: 450px; /* Mesmo que .top-video */
+    object-fit: cover; /* Para ajustar a imagem sem distorção */
+    border-radius: 10px;
+}
+
+.video-section {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+.video-container {
+    width: 80%; /* Ajuste conforme necessário */
+    max-width: 800px;
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.video-container:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.top-video {
+    width: 100%;
+    height: 450px; /* Ajuste conforme necessário */
+    border: none;
+    border-radius: 10px;
 }
